2010-03-03  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppArmadillo.h: avoid an extra memory copy when 
	possible (i.e. in wrap( eGlue) and wrap( eOp ) when the elem_type
	is int or double).
	
2010-03-02  Dirk Eddelbuettel  <edd@dexter>

	* src/RcppArmadillo.cpp: Added bare-bones 'fastLm' function
	* R/fastLm.R: Added fastLm R wrapper for C++ fastLm
	* man/fastLm.Rd: Added manual page
	* inst/unitTests/runit.RcppArmadillo.R: Added unit test
	* NAMESPACE: Made fastLm visible

2010-03-02  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppArmadillo.h: support for Armadillo 0.9.*

2010-03-01  Dirk Eddelbuettel  <edd@debian.org>

	* configure.in: Add configure support to test for version 0.9.0

2010-02-23  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppArmadillo.h: support for wrap( arma::Glue )
	and wrap( arma::Op ) enabling wrap()'ing arbitrary expressions
	involving arma::Mat objects, for example wrap( m1 + m2 ), or
	wrap( -m1 )

	* inst/unitTests/runit.RcppArmadillo.R: new unit test for
	wrap( Glue ) and wrap( Op )

2010-02-20  Dirk Eddelbuettel  <edd@debian.org>

	* configure.in: Add configure support to test for presence of
	  'armadillo' header and working 'libarmadillo' library; and
	  a test for version 0.7.0 or higher (for Cube() type)
	* src/Makevars.in: Setup to be filled-in from configure
	* src/RcppArmadilloDefines.h.in: Idem
	* cleanup: Added to remove configure-generated files

	* R/flags.R: Small cleanups

	* src/RcppArmadillo.h: Use the #define ARMA_HAS_CUBE from the
	  autogenerated header, reindent using Emacs' defaults

2010-02-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Restrict to 'OS_type: unix' for now,
	  set Date: as an SVN property

2010-02-19  Romain Francois <romain@r-enthusiasts.com>

	* added support for field<T> where T is wrappable

2010-02-17  Romain Francois <romain@r-enthusiasts.com>

	* added support for as<Mat<T>> as<Row<T>> and as<Col<T>>