@@ -20,5 +20,16 @@
 // You should have received a copy of the GNU General Public License
 // along with RcppArmadillo.  If not, see <http://www.gnu.org/licenses/>.
 
+#ifndef RcppArmadillo__RcppArmadilloDefines__H
+#define RcppArmadillo__RcppArmadilloDefines__H
+
 #define ARMA_VERSION_GE_070 @ARMA_VERSION_GE_070@
 #define ARMA_VERSION_GE_090 @ARMA_VERSION_GE_090@
+
+#ifdef ARMA_VERSION_GE_090
+#define SCALAR(X) ::arma::as_scalar(X)
+#else
+#define SCALAR(X) X
+#endif
+
+#endif
